# set of openLDAP static libraries

CMAKE_MINIMUM_REQUIRED(VERSION 2.6.4)
PROJECT (openldap)

SET(INC_DIRECTORIES include include/sasl)

SET(SOURCES )

SET(SASL_LIBRARY_TYPE STATIC)
#SET(SASL_LIBRARY_TYPE SHARED)

IF("${SASL_LIBRARY_TYPE}" STREQUAL "STATIC")
	#MESSAGE ("---- Static type of SASL library will be created")
	ADD_DEFINITIONS( -DLIBSASL_STATICAL_LINKAGE )
ELSE("${SASL_LIBRARY_TYPE}" STREQUAL "STATIC")
	ADD_DEFINITIONS(-DLIBSASL_EXPORTS)
	#MESSAGE ("Shared type of SASL library will be created")
ENDIF("${SASL_LIBRARY_TYPE}" STREQUAL "STATIC")

ADD_DEFINITIONS(
	-Dopenldap_EXPORTS
	-DLDAP_LIBS_DYNAMIC
)

#Windows additional directories
IF(WIN32)
	LIST(APPEND INC_DIRECTORIES
		include/win32
		${EXTERN_ROOT}/OpenSSL/include
	)
ELSEIF(UNIX AND NOT APPLE)
	#Linux additional directories
	LIST(APPEND INC_DIRECTORIES include/sasl/linux)
	INCLUDE_DIRECTORIES( include/linux SYSTEM)
ELSEIF(APPLE)
	#Mac OS X additional directories
	LIST(APPEND INC_DIRECTORIES include/sasl/mac)
	LIST(APPEND INC_DIRECTORIES include/mac)
ENDIF(WIN32)

INCLUDE_DIRECTORIES( ${INC_DIRECTORIES} )

AUX_SOURCE_DIRECTORY(libraries/liblber liblber_SOURCES)
AUX_SOURCE_DIRECTORY(libraries/libldap libldap_SOURCES)

LIST(APPEND SOURCES
	${liblber_SOURCES}
	${libldap_SOURCES}
)

#remove windows dependent file
IF(UNIX)
	LIST(REMOVE_ITEM SOURCES libraries/liblber/nt_err.c)
ELSEIF(WIN32)
	#remove unix dependent file
	LIST(REMOVE_ITEM SOURCES libraries/libldap/dlopen.c)
ENDIF(UNIX)

#additional libraries that are part of openLDAP
ADD_SUBDIRECTORY(libraries/libldif)
ADD_SUBDIRECTORY(libraries/liblutil)
ADD_SUBDIRECTORY(libraries/libsasl)

ADD_LIBRARY (openldap SHARED
	${SOURCES}
	include/lber.h
	include/ldap_cdefs.h
)

SET_TARGET_PROPERTIES(openldap PROPERTIES LINKER_LANGUAGE C)

# set not incremental linkage for Windows
IF(WIN32)
	SET_TARGET_PROPERTIES(openldap PROPERTIES LINK_FLAGS_DEBUG /INCREMENTAL:NO)
	SET_TARGET_PROPERTIES(openldap PROPERTIES LINK_FLAGS_RELEASE /INCREMENTAL:NO)
ENDIF(WIN32)

# set output name of shared library
SET_TARGET_PROPERTIES(
	openldap
	PROPERTIES
	RELEASE_OUTPUT_NAME   openldap
	DEBUG_OUTPUT_NAME   openldap
)

SET(LNK_LIBRARIES)

LIST(APPEND LNK_LIBRARIES
	libldif
	liblutil
	libsasl
)

IF(WIN32)
	LIST(APPEND LNK_LIBRARIES
		${EXTERN_ROOT}/OpenSSL/libeay32.lib
		${EXTERN_ROOT}/OpenSSL/ssleay32.lib
	)
ENDIF(WIN32)

TARGET_LINK_LIBRARIES(openldap
	${LNK_LIBRARIES}
)


IF(STANDALONE_EXTERN_BUILD)

	INSTALL(TARGETS openldap
		RUNTIME DESTINATION ${EXTERN_BIN_DIRECTORY}
		LIBRARY DESTINATION ${EXTERN_BIN_DIRECTORY}
		ARCHIVE DESTINATION ${EXTERN_LIB_DIRECTORY}
	)

ELSE(STANDALONE_EXTERN_BUILD)

	IF(UNIX AND NOT APPLE)
		INSTALL(TARGETS openldap
			RUNTIME DESTINATION /usr/local/movial/lib
			LIBRARY DESTINATION /usr/local/movial/lib
			)
	ELSE(UNIX AND NOT APPLE)
		INSTALL(TARGETS openldap
			RUNTIME DESTINATION .
			LIBRARY DESTINATION .
			)
	ENDIF(UNIX AND NOT APPLE)

ENDIF(STANDALONE_EXTERN_BUILD)

